Api-Tfg/src/main/kotlin/com/example/Api_Tfg/error/ErrorRespuesta.kt
package com.example.Api_Tfg.error

data class ErrorRespuesta(val message: String, val uri: String) {
}